syntax = "proto3";

option csharp_namespace = "Frontend";

package protos;

service CategoryService {
  rpc ListCategories (Void) returns (Categories) {}
  rpc GetCategory (CategoryId) returns (Category) {}
  rpc CreateCategory (CategoryName) returns (Category) {}
  rpc UpdateCategory (Category) returns (Category) {}
  rpc DeleteCategory (CategoryId) returns (Category) {}
}

message Void {}

message CategoryId {
    string id = 1;
}

message CategoryName {
    string name = 1;
}

message Category {
    string id = 1;
    string name = 2;
}

message Categories {
    repeated Category categories_list = 1;
}